Refractor Code & Added CRUD